src/main/java/org/example/dip/correct/INotifierService.java
package org.example.dip.correct;

public interface INotifierService {

    void sendMessage(final String to, final String message);
}
